# PX4-Autonomous-Vehicle

./: .gitignore  PX4-Autopilot  README.md  UI_air.sh  mavlink  sitl_gazebo
clover/: README.md  (+4 more)
px4_ground/: CMakeLists.txt  README.md  package.xml
px4_ground/airframe_2/: readme.md
px4_ground/airframes/: readme.md
px4_ground/airframes_2/: readme_2.md
px4_ground/airframes_hitl/: readme_2.md
px4_ground/airframes_sitl/: 10016_frame450  1045_osprey_vtol  1064_diff_rover  4501_450_frame  4502_550_frame  4502_osprey_vtol  4503_avia_vtol  4505_diff_rover  4506_acker_rover  6013_550_frame  readme.md
px4_ground/config/car_visual/: global_costmap_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml  visual_rviz.rviz
px4_ground/config/cfg/diff_drive/: costmap_common_params.yaml  costmap_converter_params.yaml  global_costmap_params.yaml
px4_ground/config/move_base/: costmap_common_params.yaml
px4_ground/config/rviz/: AirMapping.rviz
px4_ground/include/: auto_2d_nav.h  landing_quadrotor.h  mission_car_offboard.h  offboard_control.h  px4_control_cfg.h  ros_nav_quadrotor.h  tracking_quadrotor.h
px4_ground/launch/: 0launch_model_only.launch  0main_camera.launch  0mavros.launch  1mavros_posix_sitl.launch  1setup.launch  2mission_ManualOffb.launch  2obs_avoidance_air.launch  2obs_avoidance_ground2.launch  2obs_avoidance_lidar.launch  2obs_avoidance_visualORB.launch  3mission_FollowMe_sitl.launch  3mission_ManualOffb_sitl.launch  3mission_QGCaruco.launch  3mission_QGCaruco_sitl.launch  3mission_SingleOffb_sitl.launch  3mission_car_manualoffb_sitl.launch  3mission_car_qgcaruco_sitl.launch  3mission_car_singleoffb_sitl.launch  3mission_manualoffb_sitl.launch  3mission_qgcaruco_sitl.launch  3mission_singleoffb_sitl.launch  4mission_SingleOffb.launch  4mission_car_qgcaruco_avoid_sitl.launch  4multi_uav_mavros_sitl.launch  5mission_SingleOffb_Avoid.launch  6mission_FollowMe.launch  7mission_Follow_guests.launch  fisheye_cam.yaml  hexa_hitl.launch  px4_config.yaml  px4_pluginlists.yaml
px4_ground/mission/: mission_spiral.txt  missionwp_land.txt  missionwp_rtl.txt  qgcwp.txt
px4_ground/models/450_frame/: 450_frame.sdf  model.config
px4_ground/models/550_frame/: 550_frame.sdf  model.config
px4_ground/models/550_frame/meshes/: deliveryBox.stl
px4_ground/models/acker_rover/: acker_rover.sdf  acker_rover.sdf.last_generated
px4_ground/models/avia_vtol/: avia_vtol.sdf  model.config
px4_ground/models/avia_vtol/overview/: OverView.txt
px4_ground/models/balance_bot/: balance_bot copy.sdf  balance_bot.sdf
px4_ground/models/box1kg/: box1kg.sdf  model.config
px4_ground/models/diff_rover/: diff_rover.sdf  diff_rover.sdf.last_generated
px4_ground/models/frame450/: frame450.sdf  model.config
px4_ground/models/hitl_typhoon_h480/: hitl_typhoon_h480.sdf
px4_ground/models/hitl_typhoon_h480/overview/: OverView.txt
px4_ground/models/iris2/: iris2.sdf  model.config
px4_ground/models/matrice_100/: matrice_100.sdf.last_generated
px4_ground/models/ospey_vtol/: ospey_vtol.sdf.last_generated
px4_ground/models/osprey_vtol/: model.config  osprey_vtol.sdf
px4_ground/models/osprey_vtol/meshes/: Rotor CCW.stl  Rotor CW.stl
px4_ground/models/r1_rover/: r1_rover.sdf  r1_rover1.sdf
px4_ground/models/rover/: rover.sdf
px4_ground/models/rover/overview/: OverView.txt
px4_ground/models/standard_vtol/: standard_vtol.sdf
px4_ground/models/tank/: tank copy.sdf  tank.sdf
px4_ground/models/typhoon_h480/: typhoon_h480.sdf
px4_ground/script/: mavros_mission_px4.py  teleop_twist_keyboard.py
px4_ground/src/: auto_2d_nav.cpp  avoidance_car_vfh.cpp  circular.cpp  circular_car.cpp  cmd_vel_mavros.cpp  collision_avoidance_vfh.cpp  control_vel.py  figure_8_circle.cpp  follow_guests.cpp  hello  hello.cpp  keyboard_control_car_px4.py  landing_quadrotor(not builded).cpp  landing_quadrotor.cpp  mavros_mission_px4.py  mavros_offboard_posctl_test.py  mavros_offboard_yawrate_test.py  mavros_test_common.py  mission_car_offboard.cpp  point_cloud_to_depth_image.py  pointcloud_to_depth.cpp  position_to_mavros.cpp  reading_txt_misiion.cpp  ros_nav_quadrotor.cpp  set_mode.cpp  test.cpp  tracking_aruco.cpp  tracking_quadrotor(not builded).cpp  tracking_quadrotor.cpp  tracking_yolo.cpp  tracking_yolo_car.cpp  traectory_example.cpp  velocity_control(not builded).cpp  www
px4_ground/worlds/: city.world
(+432 files in other folders)
